test/Fail/Issue1388.err
Issue1388.agda:7,1-19: error: [GenericError]
No declarations allowed after top-level module.
